src/test/ui/pattern/pattern-tyvar.stderr
error[E0308]: mismatched types
  --> $DIR/pattern-tyvar.rs:5:18
   |
LL |     match t {
   |           - this expression has type `Bar`
LL |       Bar::T1(_, Some::<isize>(x)) => {
   |                  ^^^^^^^^^^^^^^^^ expected struct `std::vec::Vec`, found `isize`
   |
   = note: expected enum `std::option::Option<std::vec::Vec<isize>>`
              found enum `std::option::Option<isize>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
